# mirror-git-to-s3

./: README.md  mirror_git_to_s3.py  pyproject.toml  start-services.sh  stop-services.sh  test_mirror_git_to_s3.py
.github/workflows/: deploy-package-to-pypi.yml  tests.yml
